--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,7 +46,7 @@ Notes:
                 </div>
             </div>
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 centerText">
-                <ul class="list-group tm-home-list tm-bg-black font-weight-light">
+                <ul class="list-group tm-home-list tm-bg-black centerText">
                     <li class="d-flex justify-content-between align-items-center">
                         <a href="../views/register.ejs" class="external" class="tm-white-text">Update</a>
                     </li>
