--- a/views/login.html
+++ b/views/login.html
@@ -46,12 +46,20 @@ Notes:
 
     <div class="container">
         <div class="row tm-register-row tm-mb-35">
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+                <header class="mb-5">
+                    <h3 class="tm-blue-text"><b>Login Page</b></h3>
+                    <p class="grey-text mb-4">You can create a <b class = "tm-blue-text">Muscle Maker</b>&copy; account here! .</p>
+                </header>
+            </div>
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 tm-login-l">
                 <form action="" method="post" class="tm-bg-black p-5 h-100">
                     <div class="input-field">
+                        <h3 class = "centerText">Username</p>
                         <input placeholder="Username" id="username" name="username" type="text" class="validate">
                     </div>
                     <div class="input-field mb-5">
+                        <h3 class = "centerText">Password</p>
                         <input placeholder="Password" id="password" name="password" type="password" class="validate">
                     </div>
                     <div class="tm-flex-lr">
