--- a/views/register.ejs
+++ b/views/register.ejs
@@ -43,9 +43,15 @@ Notes:
             <button class="btn btn-sm">Search</button>
         </div>
     </nav>
-    <div class="container tm-bg-black">
         <div class="row tm-register-row">
-            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 tm-register-col-l">
+            <div class="tm-bg-black tm-form-block">
+            <header class="mt-5 mb-5 text-center">
+                <h1 class="font-weight-light tm-form-title centerText tm-blue-text">Register Now!</h1>
+                <p class="tm-form-description centerText">Make sure you update with the most accurate information possible. (Doctor records are reccomended!)</p>
+                <p class="tm-form-description small centerText">Give the system some time to update new information.</p>
+            </header>
+            </div>
+            <div class="tm-bg-black tm-form-block centerText">
                 <form action="/updateperson/" method="post" id ="update">
                     <div class="mb-2">
                         <label class="mr-4">
@@ -147,15 +153,9 @@ Notes:
                     </div>
                 </form>
             </div>
-            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 tm-register-col-r centerText">
-                <header class="mb-5">
-                    <h3 class="mt-0 tm-blue-text">REGISTER Yourself</h3>
-                    <p class="grey-text centerText">Make sure you update with the most accurate information possible. (Doctor records are reccomended!)</p>
-                    <p class="grey-text centerText">Give the system some time to update new information.</p>
-                </header>
-
             </div>
         </div>
+        </body>
         <footer class="row tm-mt-big mb-3">
             <div class="col-xl-12">
                 <p class="text-center grey-text text-lighten-2 tm-footer-text-small centerText">
