--- a/views/shoulder.html
+++ b/views/shoulder.html
@@ -1,6 +1,6 @@
 <!--
 -----------------------------------------------------------------------------
-Name: bicep.html
+Name: shoulder.html
 Author: @NCiavone
 Date Created: 12/8/21
 Purpose: The html file for displaying the routines.
@@ -47,26 +47,25 @@ Notes:
     <div class="row">
         <div class="col-12">
             <header class="mt-5 mb-5 text-center">
-                <h1 class="font-weight-light tm-form-title centerText tm-blue-text"> Dumbell Bicep Curl</h1>
-                <p class="tm-form-description centerText">The dumbbell biceps curl is a single-joint exercise for building bigger and stronger biceps. Popular among gym goers of all experience levels, this move can be done seated or standing. It is generally performed for moderate to high reps, such as 8-12 reps or higher, as part of the arm-focused portion of a workout. </p>
+                <h1 class="font-weight-light tm-form-title centerText tm-blue-text">Standing Dumbbell Shoulder Press</h1>
+                <p class="tm-form-description centerText">The standing dumbbell shoulder press is a classic deltoid-building exercise that is common in gyms around the world. Performing the move standing up as opposed to seated allows more weight to be used and taxes the core more than seated presses. The standing press is worthy of being the main movement in a muscle-building shoulder workout, but is also a great strength movement and accessory for the bench press.</p>
+
             </header>
 
             <div class="tm-bg-black tm-form-block">
                 <h4 class="mb-4 tm-blue-text centerText">Exercise Instructions</h4>
                 <div class="row centerText">
-                    <p>1. Stand up straight with a dumbbell in each hand at arm's length. Keep your elbows close to your torso and rotate the palms of your hands until they are facing forward. This will be your starting position.</p>
-                    <p>2. Now, keeping the upper arms stationary, exhale and curl the weights while contracting your biceps. Continue to raise the weights until your biceps are fully contracted and the dumbbells are at shoulder level. Hold the contracted position for a brief pause as you squeeze your biceps.</p>
-                    <p>3. Then, inhale and slowly begin to lower the dumbbells back to the starting position.</p>
-                    <p>4. Repeat for the recommended amount of repetitions.</p>
+                    <p>1. Standing with your feet shoulder width apart, take a dumbbell in each hand. Raise the dumbbells to head height, the elbows out and about 90 degrees. This will be your starting position.</p>
+                    <p>2. Maintaining strict technique with no leg drive or leaning back, extend through the elbow to raise the weights together directly above your head.</p>
+                    <p>3. Pause, and slowly return the weight to the starting position.</p>
                 </div>
             </div>
             <div class="tm-bg-black tm-form-block">
                 <h4 class="mb-4 tm-blue-text centerText">Exercise Benefits</h4>
                 <div class="row centerText">
-                    <p>1. Permits wrist supination, unlike the barbell version.</p>
-                    <p>2. Allows you to target the biceps.</p>
-                    <p>3. More time efficient than the alternating dumbbell curl.</p>
-                    <p>4. Simple way to build biceps size and strength.</p>
+                    <p>1. Builds size and strength in the shoulders and triceps.</p>
+                    <p>2. Many people find pressing with dumbbells to be more shoulder-friendly than with barbells.</p>
+                    <p>3. Develops shoulder strength and stability that carries over to other lifts and sports</p>
                 </div>
             </div>
             <div class="tm-bg-black tm-form-block">
@@ -74,13 +73,13 @@ Notes:
                 <div class="row">
                     <div class="row">
                         <div class="column">
-                        <p class="tm-form-description centerText">This is the Bicep Curl in the down position.</p>
-                          <img src="../public/img/bicepdown.jpg" alt="Bicep Curl Down" style="width:100%">
+                        <p class="tm-form-description centerText">This is the Shoulder Press in the down position.</p>
+                          <img src="../public/img/shoulderdown.jpg" alt="Bicep Curl Down" style="width:100%">
                         </div>
                     </br>
                         <div class="column">
-                            <p class="tm-form-description centerText">This is the Bicep Curl in the up position.</p>
-                          <img src="../public/img/bicepup.jpg" alt="Bicep Curl Up" style="width:100%">
+                            <p class="tm-form-description centerText">This is the Shoulder Press in the up position.</p>
+                          <img src="../public/img/shoulderup.jpg" alt="Bicep Curl Up" style="width:100%">
                         </div>
                       </div>
                 </div>
