Exercise Library Update

--- a/public/css/styleMM.css
+++ b/public/css/styleMM.css
@@ -320,7 +320,7 @@ html {
   }
   
   .tm-footer-link {
-    color: skyblue;
+    color: white;
   }
   
   .tm-footer-link:hover,
@@ -655,4 +655,21 @@ html {
       text-align: center;
       justify-content: center;
     }
+    table {
+      font-family: arial, sans-serif;
+      border-collapse: collapse;
+      width: 100%;
+    }
+    
+    td, th {
+      border: 1px solid #dddddd;
+      text-align: left;
+      padding: 8px;
+    }
+    
+    tr:nth-child(even) {
+      background-color: skyblue;
+    }
+   
+    
   
