--- a/views/reardelt.html
+++ b/views/reardelt.html
@@ -1,6 +1,6 @@
 <!--
 -----------------------------------------------------------------------------
-Name: shoulder.html
+Name: reardelt.html
 Author: @NCiavone
 Date Created: 12/8/21
 Purpose: The html file for displaying the routines.
@@ -26,25 +26,28 @@ Notes:
     <div class="row">
         <div class="col-12">
             <header class="mt-5 mb-5 text-center">
-                <h1 class="font-weight-light tm-form-title centerText tm-blue-text">Standing Dumbbell Shoulder Press</h1>
-                <p class="tm-form-description centerText">The standing dumbbell shoulder press is a classic deltoid-building exercise that is common in gyms around the world. Performing the move standing up as opposed to seated allows more weight to be used and taxes the core more than seated presses. The standing press is worthy of being the main movement in a muscle-building shoulder workout, but is also a great strength movement and accessory for the bench press.</p>
-
+                <h1 class="font-weight-light tm-form-title centerText tm-blue-text">Seated Dumbell Rear Delt Fly</h1>
+                <p class="tm-form-description centerText">The seated rear delt fly is an upper-body exercise that targets the real deltoid of the shoulder. By performing the movement seated, it eliminates momentum from the rest of the body. This movement is usually performed for moderate to high reps, such as 8-12 reps per set or more, as part of the upper-body or shoulder-focused portion of a workout.</p>
             </header>
 
             <div class="tm-bg-black tm-form-block">
                 <h4 class="mb-4 tm-blue-text centerText">Exercise Instructions</h4>
                 <div class="row centerText">
-                    <p>1. Standing with your feet shoulder width apart, take a dumbbell in each hand. Raise the dumbbells to head height, the elbows out and about 90 degrees. This will be your starting position.</p>
-                    <p>2. Maintaining strict technique with no leg drive or leaning back, extend through the elbow to raise the weights together directly above your head.</p>
-                    <p>3. Pause, and slowly return the weight to the starting position.</p>
+                    <p>1. Place a couple of dumbbells looking forward in front of a flat bench.</p>
+                    <p>2. Sit on the end of the bench with your legs together and the dumbbells behind your calves.</p>
+                    <p>3. Bend at the waist while keeping the back straight in order to pick up the dumbbells. The palms of your hands should be facing each other as you pick them. This will be your starting position.</p>
+                    <p>4. Keeping your torso forward and stationary, and the arms slightly bent at the elbows, lift the dumbbells straight to the side until both arms are parallel to the floor. Exhale as you lift the weights. (Note: avoid swinging the torso or bringing the arms back as opposed to the side.)</p>
+                    <p>5. After a one second contraction at the top, slowly lower the dumbbells back to the starting position.</p>
+                    <p>6. Repeat for the recommended amount of repetitions.</p>
+                    <p><b>Variation:</b>This exercise can also be performed standing but those with lower back problems are better off performing this seated variety.</p>
                 </div>
             </div>
             <div class="tm-bg-black tm-form-block">
                 <h4 class="mb-4 tm-blue-text centerText">Exercise Benefits</h4>
                 <div class="row centerText">
-                    <p>1. Builds size and strength in the shoulders and triceps.</p>
-                    <p>2. Many people find pressing with dumbbells to be more shoulder-friendly than with barbells.</p>
-                    <p>3. Develops shoulder strength and stability that carries over to other lifts and sports</p>
+                    <p>1. Promotes shoulder health and balanced development.</p>
+                    <p>2. Great burnout movement on shoulder day (Routine A).</p>
+                    <p>3. Strengthens important postural muscles in the upper back.</p>
                 </div>
             </div>
             <div class="tm-bg-black tm-form-block">
@@ -52,13 +55,13 @@ Notes:
                 <div class="row">
                     <div class="row">
                         <div class="column">
-                        <p class="tm-form-description centerText">This is the Shoulder Press in the down position.</p>
-                          <img src="../public/img/shoulderdown.jpg" alt="Shoulder Press Down" style="width:100%">
+                        <p class="tm-form-description centerText">This is the Rear Delt Fly in the down position.</p>
+                          <img src="../public/img/reardddown.jpg" alt="Rear Delt Fly Down" style="width:100%">
                         </div>
                     </br>
                         <div class="column">
-                            <p class="tm-form-description centerText">This is the Shoulder Press in the up position.</p>
-                          <img src="../public/img/shoulderup.jpg" alt="Shoulder Press Up" style="width:100%">
+                            <p class="tm-form-description centerText">This is the Rear Delt Fly in the up position.</p>
+                          <img src="../public/img/reardup.jpg" alt="Rear Delt Fly Up" style="width:100%">
                         </div>
                       </div>
                 </div>
