--- a/index.ejs
+++ b/index.ejs
@@ -20,9 +20,9 @@ Notes:
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Muscle Maker</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600">
-    <link rel="stylesheet" href="../public/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../public/css/materialize.min.css">
-    <link rel="stylesheet" href="../public/css/styleMM.css">
+    <link rel="stylesheet" href="/public/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/public/css/materialize.min.css">
+    <link rel="stylesheet" href="/public/css/styleMM.css">
     <!--This is from Font Awesome-->
     <script src="https://kit.fontawesome.com/4d808d741c.js" crossorigin="anonymous"></script>
 
