--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -17,7 +17,7 @@ Notes:
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Sign Up Page</title>
-    <link rel="stylesheet" href="index.ejs">
+    <link rel="stylesheet" href="public\css\styleMM.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600">
     <link rel="stylesheet" href="../public/css/bootstrap.min.css">
     <link rel="stylesheet" href="../public/css/materialize.min.css">
@@ -29,7 +29,7 @@ Notes:
         <!-- we have used list tag that is ul 
              to list the items-->
         <ul class="nav-list">
-            <li><a href="/index.ejs">Home</a></li>
+            <li><a href="index.ejs">Home</a></li>
             <li><a href="login.html">Login</a></li>
             <li><a href="signup.ejs">Sign-Up</a></li>
             <li><a href="survey.html">Survey</a></li>
