--- a/views/routines.ejs
+++ b/views/routines.ejs
@@ -28,7 +28,7 @@ Notes:
         <!-- we have used list tag that is ul 
              to list the items-->
         <ul class="nav-list">
-            <li><a href="/index.ejs">Home</a></li>
+            <li><a href="../index.ejs">Home</a></li>
             <li><a href="login.html">Login</a></li>
             <li><a href="signup.ejs">Sign-Up</a></li>
             <li><a href="survey.html">Survey</a></li>
